corrected alignment

--- a/style.css
+++ b/style.css
@@ -161,7 +161,6 @@ header a:hover{
 .box img{
 	max-width: 100%;
 	max-height: 100%;
-	margin-left: 30%;
 }
 .box p{
 	text-align: justify;
